tests/models/struct/unnamed/f32/fail/max_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_items = 2)]
    f32
);
fn main() {}
